--- a/template-webapp/src/main/resources/NUTZ-IOC/core-config.properties
+++ b/template-webapp/src/main/resources/NUTZ-IOC/core-config.properties
@@ -2,3 +2,14 @@
 jdbc.url = jdbc:h2:${catalina.base}/tpl/db/core
 jdbc.user = root
 jdbc.password = toor
+
+# admin_console shiro configurations
+admin_console.shiro.login_url=/admin_console/login.html
+admin_console.shiro.logout_url=/admin_console/login.html
+admin_console.shiro.success_url=/admin_console/index.html
+admin_console.shiro.filter_chain=\
+                /admin_console/login.html=authc \n\
+                /admin_console/logout.html=logout \n\
+                /admin_console/**/*.html = authc\n\
+
+#
