Added default page access control.

--- a/template-webapp/src/main/resources/NUTZ-IOC/core-config.properties
+++ b/template-webapp/src/main/resources/NUTZ-IOC/core-config.properties
@@ -11,5 +11,6 @@ admin_console.shiro.filter_chain=\
                 /admin_console/login.html=authc \n\
                 /admin_console/logout.html=logout \n\
                 /admin_console/**/*.html = authc\n\
+                /admin_console/**/ = authc\n\
 
 #
