--- a/template-webapp/src/main/resources/NUTZ-IOC/core-config.properties
+++ b/template-webapp/src/main/resources/NUTZ-IOC/core-config.properties
@@ -3,6 +3,9 @@ jdbc.url = jdbc:h2:${catalina.base}/tpl/db/core
 jdbc.user = root
 jdbc.password = toor
 
+# attachments configurations
+attachments.rootpath = ${catalina.base}/tpl/res/attachments
+
 # admin_console shiro configurations
 admin_console.shiro.login_url=/admin_console/login.html
 admin_console.shiro.logout_url=/admin_console/login.html
