[core,web]: Java runtime compiling and running servlet structures added.

--- a/template-webapp/src/main/resources/NUTZ-IOC/core-config.properties
+++ b/template-webapp/src/main/resources/NUTZ-IOC/core-config.properties
@@ -3,6 +3,9 @@ jdbc.url = jdbc:h2:${catalina.base}/tpl/db/core
 jdbc.user = root
 jdbc.password = toor
 
+# Java class finder configurations
+classfinder.targetdir = ${catalina.base}/tpl/javasrc/target
+
 # attachments configurations
 attachments.rootpath = ${catalina.base}/tpl/res/attachments
 
